# cpp_static_lib_template

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  readme.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: documentation.yml  ubuntu.yml  windows.yml
app/: CMakeLists.txt  main.cpp
cmake/: CodeCoverage.cmake  Tools.cmake  Warnings.cmake
configured/: config.h.in
docs/: Doxyfile
include/cpp_static_lib_template/: library.h
src/: CMakeLists.txt  library.cpp
tests/: CMakeLists.txt  library.cpp
